added answer link

--- a/public/questions.html
+++ b/public/questions.html
@@ -137,9 +137,9 @@
             <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">Arcadia Group</h2>
             </div>
-            <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+            <a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="answer.html">
               Answer Now
-            </button>
+            </a>
           </div>
 
           <div class="demo-card-wide demo-card-wide2 mdl-card mdl-shadow--2dp">
