added play buttons

--- a/public/answers.html
+++ b/public/answers.html
@@ -137,7 +137,7 @@
             </div>
             <div class="mdl-card__menu">
             <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-              <i class="material-icons">share</i>
+              <i class="material-icons">play_circle_filled</i>
             </button>
           </div>
           </div>
@@ -151,7 +151,7 @@
             </div>
             <div class="mdl-card__menu">
             <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-              <i class="material-icons">share</i>
+              <i class="material-icons">play_circle_filled</i>
             </button>
           </div>
           </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="mdl-card__menu">
             <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-              <i class="material-icons">share</i>
+              <i class="material-icons">play_circle_filled</i>
             </button>
           </div>
           </div>
