white background during progress screen

--- a/public/answer.html
+++ b/public/answer.html
@@ -131,9 +131,13 @@
       margin-left: 8px;
     }
     .video-recorder-initial,
-    .video-uploader-upload,
+    .video-recorder-upload,
     .video-recorder-error,
-    .video-recorder-progress {
+    .video-recorder-progress,
+    .video-uploader-initial,
+    .video-uploader-upload,
+    .video-uploader-error,
+    .video-uploader-progress {
       background: white;
     }
     .video-recorder-initial .hero-img,
